Some tweaks. FAQ needs more work.

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -60,6 +60,12 @@
 
 
 {#
+
+<blockquote>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  <small>Someone famous <cite title="Source Title">Source Title</cite></small>
+</blockquote>
+
                       <h4>Dontatons of any amount are appreciated. Contributions help us directly cover hosting and operational expenses.</h4>
                       <p>
                           <form action="https://authorize.payments.amazon.com/pba/paypipeline" method="post">
