--- a/templates/help.html
+++ b/templates/help.html
@@ -5,146 +5,53 @@
 {% block maincontent %}
 <div class="container">
     <div class="row">
-        <div class="span9">
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq1">
-                        <i class="icon-question-sign"></i>
-                        What if my doctor tells me something different?
-                    </div>
-                </div>
-                <div class="faq-body" id="faq1">
-                    <div class="faq-inner">
-                        <p>Always listen to your doctor! Medicine is complex and extremely personal. Our understanding of diseases, diagnostics, and therapeutic options are changing daily.</p>
-                        <p>ClinDesk and White Coat Academy are only guides to help you understand conditions, and barely skim the surface of medicine. A medical professional knows best!</p>
-                    </div>
-                </div>
+        <div class="span8">
+            <br>
+            <div class="well">
+                <h3>Q: What if my doctor tells me something different?</h3>
+                <p>Always listen to your doctor! Medicine is complex and extremely personal. Our understanding of diseases, diagnostics, and therapeutic options are changing daily.</p>
+                <p>ClinDesk and White Coat Academy are only guides to help you understand conditions, and barely skim the surface of medicine. A medical professional knows best!</p>
             </div>
-            <!--END FAQ ITEM-->
-
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq2">
-                        <i class="icon-question-sign"></i>
-                        Can I trust what I find on ClinDesk and White Coat Academy?
-                    </div>
-                </div>
-                <div class="faq-body" id="faq2">
-                    <div class="faq-inner">
-                        <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
-                            To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
-                        <p>If you've found an error or mistake, please let us know at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
-                    </div>
-                </div>
+            <div class="well">
+                <h3>Q: Can I trust what I find on ClinDesk and White Coat Academy?</h3>
+                <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
+                    To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
+                <p>If you've found an error or mistake, please let us know at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
             </div>
-            <!--END FAQ ITEM-->
-
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq3">
-                        <i class="icon-question-sign"></i>
-                        Can I save or download your videos and other content? What's your copyright policy?
-                    </div>
-                </div>
-                <div class="faq-body" id="faq3">
-                    <div class="faq-inner">
-                        <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="http://creativecommons.org/" target="_blank">Creative Commons</a> license.
-                            We've chosen the Creative Commons 3.0 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
-                        <p>This means three things:</p>
-                        <ul>
-                            <li>BY &mdash; By Attribution: You must clearly attribute any content to ClinDesk &amp; White Coat Academy.</li>
-                            <li>NC &mdash; Non-Commercial: You cannot use our content for commercial purposes.</li>
-                            <li>SA &mdash; Share Alike: If you build upon our content, you need to share it with others using a similar license.</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="well">
+                <h3>Q: Can I save or download your videos and other content? What's your copyright policy?</h3>
+                <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="http://creativecommons.org/" target="_blank">Creative Commons</a> license.
+                    We've chosen the Creative Commons 3.0 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
+                <p>This means three things:</p>
+                <ul>
+                    <li>BY &mdash; By Attribution: You must clearly attribute any content to ClinDesk &amp; White Coat Academy.</li>
+                    <li>NC &mdash; Non-Commercial: You cannot use our content for commercial purposes.</li>
+                    <li>SA &mdash; Share Alike: If you build upon our content, you need to share it with others using a similar license.</li>
+                </ul>
             </div>
-            <!--END FAQ ITEM-->
-
-
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq4">
-                        <i class="icon-question-sign"></i>
-                        How can I give feedback? I think I found a mistake on the site.
-                    </div>
-                </div>
-                <div class="faq-body" id="faq4">
-                    <div class="faq-inner">
-                        <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@clindesk.org">team@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
-                    </div>
-                </div>
+            <div class="well">
+                <h3>Q: How can I give feedback? I think I found a mistake on the site.</h3>
+                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@clindesk.org">team@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
             </div>
-            <!--END FAQ ITEM-->
-
-
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq5">
-                        <i class="icon-question-sign"></i>
-                        How is ClinDesk financed? Do you make money?
-                    </div>
-                </div>
-                <div class="faq-body" id="faq5">
-                    <div class="faq-inner">
-                        <p>We're a non-profit organization, which means we depend on donations and grants to keep us going (bandwidth is expensive!).</p>
-                        <p>If you've found our materials helpful, please <a href="donate.html">donate</a> so we can continue to improve our resources. </p>
-                    </div>
-                </div>
+            <div class="well">
+                <h3>Q: How is ClinDesk financed? Do you make money?</h3>
+                <p>We're a non-profit organization, which means we depend on donations and grants to keep us going (bandwidth is expensive!).</p>
+                <p>If you've found our materials helpful, please <a href="donate.html">donate</a> so we can continue to improve our resources. </p>
             </div>
-            <!--END FAQ ITEM-->
-
-
-            <!--FAQ-->
-            <div class="faq">
-                <div class="faq-heading">
-
-                    <div data-target="#faq6">
-                        <i class="icon-question-sign"></i>
-                        I have a medical question &mdash; Can I ask you?
-                    </div>
-                </div>
-                <div class="faq-body" id="faq6">
-                    <div class="faq-inner">
-                        <p>Unfortunately, no. You should contact a real doctor, and if you have a medical emergency, you should of course call 911 (or your country's emergency number).</p>
-                        </p>
-                    </div>
-                </div>
+            <div class="well">
+                <h3>Q: I have a medical question &mdash; Can I ask you?</h3>
+                <p>Unfortunately, no. You should contact a real doctor, and if you have a medical emergency, you should of course call 911 (or your country's emergency number).</p>
             </div>
         </div>
-        <div class="span3 sidebar">
-
-            <div class="widget widget_contact">
-                <h3>Get in Touch</h3>
-                Can't find what you're looking for?<br/>Shoot us an e-mail or send us a Tweet!<br/<br/><br/>
-                <div>
-                    <span class="icon-envelope"></span>
-                    <p>E-Mail: &nbsp;<a href="mailto:team@clindesk.org">team@clindesk.org</a><br></p>
-                </div>
-                <div>
-                    <span class="icon-comment"></span>
-                    <p>
-                        Tweets: <a href="https://twitter.com/ClinDesk" target="_blank">@ClinDesk</a><br/>
-                </div>
+        <div class="span4">
+            <h3>Get in Touch</h3>
+            Can't find what you're looking for?<br/>Shoot us an e-mail or send us a Tweet!<br/<br/><br/>
+            <div>
+                <p><i class="icon-envelope"></i> E-Mail: &nbsp;<a href="mailto:team@clindesk.org">team@clindesk.org</a><br></p>
             </div>
-
-            <div class="widget widget_social">
-                <h3>Connect With Us</h3>
-                <a href="#" class="sm-icon sm-icon-pinterest"></a>
-                <a href="#" class="sm-icon sm-icon-dribbble"></a>
-                <a href="#" class="sm-icon sm-icon-skype"></a>
-                <a href="#" class="sm-icon sm-icon-facebook"></a>
-                <a href="#" class="sm-icon sm-icon-vimeo"></a>
+            <div>
+                <p><i class="icon-twitter-sign icon-large"></i>
+                    Tweets: <a href="https://twitter.com/ClinDesk" target="_blank">@ClinDesk</a><br/>
             </div>
         </div>
     </div>
