Search cleanup, image tests.

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/">ClinDesk</a>
+            <a class="brand" href="/"><img src="s/img/content/logo_sml.png"></a>
             <!-- Things that get hidden at <= 940px -->
             <div class="nav-collapse collapse">
                 <ul class="nav">
