--- a/templates/search.html
+++ b/templates/search.html
@@ -4,62 +4,45 @@
 {% block lead %}{% endblock %}
 {% block maincontent %}
 <!--main content-->
-<section class="mainContentWrap">
-  <div class="container mainContent">
-    <div class="row-fluid">
-      <div class="span9">
-        <div class="row-fluid">
-          <div class="innerSpacer">
-            <div class="row-fluid">
-              <div class="span12">
-                  <div id="cse" style="width: 100%;">Loading</div>
-                  <script src="//www.google.com/jsapi" type="text/javascript"></script>
-                  <script type="text/javascript">
-                    google.load('search', '1', {language : 'en', style : google.loader.themes.V2_DEFAULT});
-                    google.setOnLoadCallback(function() {
-                      var customSearchOptions = {};
-                      var googleAnalyticsOptions = {};
-                      googleAnalyticsOptions['queryParameter'] = 'q';
-                      googleAnalyticsOptions['categoryParameter'] = '';
-                      customSearchOptions['googleAnalyticsOptions'] = googleAnalyticsOptions;  var customSearchControl = new google.search.CustomSearchControl(
-                        '002941556813235485135:eikq6dcpctw', customSearchOptions);
-                      customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
-                      var options = new google.search.DrawOptions();
-                      options.enableSearchResultsOnly();
-                      customSearchControl.draw('cse', options);
-                      function parseParamsFromUrl() {
+<div class="container">
+    <div class="row">
+        <div class="span8">
+            <div id="cse" style="width: 100%;">Loading</div>
+            <script src="//www.google.com/jsapi" type="text/javascript"></script>
+            <script type="text/javascript">
+                google.load('search', '1', {language : 'en', style : google.loader.themes.V2_DEFAULT});
+                google.setOnLoadCallback(function() {
+                    var customSearchOptions = {};
+                    var googleAnalyticsOptions = {};
+                    googleAnalyticsOptions['queryParameter'] = 'q';
+                    googleAnalyticsOptions['categoryParameter'] = '';
+                    customSearchOptions['googleAnalyticsOptions'] = googleAnalyticsOptions;  var customSearchControl = new google.search.CustomSearchControl(
+                            '002941556813235485135:eikq6dcpctw', customSearchOptions);
+                    customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+                    var options = new google.search.DrawOptions();
+                    options.enableSearchResultsOnly();
+                    customSearchControl.draw('cse', options);
+                    function parseParamsFromUrl() {
                         var params = {};
                         var parts = window.location.search.substr(1).split('\x26');
                         for (var i = 0; i < parts.length; i++) {
-                          var keyValuePair = parts[i].split('=');
-                          var key = decodeURIComponent(keyValuePair[0]);
-                          params[key] = keyValuePair[1] ?
-                              decodeURIComponent(keyValuePair[1].replace(/\+/g, ' ')) :
-                              keyValuePair[1];
+                            var keyValuePair = parts[i].split('=');
+                            var key = decodeURIComponent(keyValuePair[0]);
+                            params[key] = keyValuePair[1] ?
+                                    decodeURIComponent(keyValuePair[1].replace(/\+/g, ' ')) :
+                                    keyValuePair[1];
                         }
                         return params;
-                      }
+                    }
 
-                      var urlParams = parseParamsFromUrl();
-                      var queryParamName = "q";
-                      if (urlParams[queryParamName]) {
+                    var urlParams = parseParamsFromUrl();
+                    var queryParamName = "q";
+                    if (urlParams[queryParamName]) {
                         customSearchControl.execute(urlParams[queryParamName]);
-                      }
-                    }, true);
-                  </script>
-              </div>
-            </div>
-          </div>
+                    }
+                }, true);
+            </script>
         </div>
-      </div>
-
-
-
-
-
-
     </div>
-  </div>
-</section>
-
+</div>
 {% endblock %}
