--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/"><img src="s/img/content/logo_sml.png"></a>
+            <a class="brand" href="/"><img src="{{ static('img/content/logo_sml.png') }}" alt="ClinDesk, Inc."></a>
             <!-- Things that get hidden at <= 940px -->
             <div class="nav-collapse collapse">
                 <ul class="nav">
@@ -49,8 +49,6 @@
         </div>
     </div>
 </div>
-
-{# <img src="{{ static('img/content/logo.png') }}" height="100" alt="ClinDesk, Inc." /> #}
 
 <header class="jumbotron subhead" id="overview">
     <div class="container">
