Add mixpanel & rename.

--- a/templates/teaser.html
+++ b/templates/teaser.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 <title>ClinDesk &amp; White Coat Academy</title>
-{% include "ga_tracking_code.html" %}
+{% include "_analytics_code.html" %}
 </head><body>
 <center><img src="{{ logopath }}" /></center>
 </body></html>
