--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ static('img/ico/apple-touch-icon-72-precomposed.png') }}">
     <link rel="apple-touch-icon-precomposed" href="{{ static('img/ico/apple-touch-icon-57-precomposed.png') }}">
     #}
-    {% include 'ga_tracking_code.html' %}
+    {% include '_analytics_code.html' %}
 </head>
 <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
