Conditions page overhaul.

--- a/templates/_all_conditions.html
+++ b/templates/_all_conditions.html
@@ -1,133 +1,123 @@
 {# TODO: Make this a modularized for loop via Flask whatnots. #}
 <div class="row-fluid">
-    <div class="span12">
-        <div class="row-fluid">
-            <ul class="thumbnails">
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Metabolism &amp; Endocrine</h5>
-                            <p>Thyroid &amp; Parathyroid,<br/>
-                            Adrenal Gland,
-                            Diabetes,<br/>
-                            Lipid Disorders,<br/>
-                            Vitamins and Nutrition, Genetic Disorders</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-{#                            <p><a href="/conditions/metabolism-and-endocrine/" class="btn btn-primary">Learn More</a></p> #}
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Blood, Bone Marrow, Lymphatics</h5>
-                            <p>Red Blood Cell Conditions,<br/>
-                                Clotting and Coagulation,<br/>
-                                Leukemias, Lymphomas,<br/>
-                                Benign Bone Marrow Disorders</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Heart and Vessels</h5>
-                            <p>Congenital Heart Defects,
-                            Diseases of Blood Vessels,
-                            Diagnostics and Blood Tests,
-                            Coronary Circulation Conditions,
-                            Cardiac Arrest</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Lungs</h5>
-                            <p>Obstructive Disease,<br>
-                              Environmental Exposures,<br>
-			      Work-related Diseases,<br>
-                              Pulmonary Hypertension,<br>
-                              Congenital Disorders</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div class="divider dotted clearfix"><span></span></div>
+  <ul class="thumbnails">
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Metabolism &amp; Endocrine</h3>
+          <p>Thyroid &amp; Parathyroid, Adrenal Gland, Diabetes, Lipid Disorders, Vitamins and Nutrition, Genetic Disorders</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
         </div>
-    </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Blood, Bone Marrow, Lymph</h3>
+          <p>Red Blood Cell Conditions,
+          Clotting and Coagulation,
+          Leukemias, Lymphomas,
+          Benign Bone Marrow Disorders
+          </p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Heart and Vessels</h3>
+          <p>Congenital Heart Defects, Diseases of Blood Vessels, Diagnostics and Blood Tests, Coronary Circulation Conditions, Cardiac Arrest</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
-
-{#row 2#}
 
 <div class="row-fluid">
-    <div class="span12">
-        <div class="row-fluid">
-            <ul class="thumbnails">
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Digestion &amp; Gastrointestinal</h5>
-                            <p>Stomach Ulcers, Acid Reflux,<br/>
-                            Irritable Bowel Syndrome,<br/>
-                            Celiac Disease<br>
-                            Colon Cancer</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Brain and Nervous System</h5>
-                            <p>Headaches, Alzheimers, <br/>
-                                Brain Tumors,<br/>
-                                Stroke, Bleeding, <br/>
-				Degenerative Disc Disease,<br/>
-                                Meningitis</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Kidneys and Urinary System</h5>
-                            <p>Chronic Kidney Disease,<br>
-                            Acute Renal Failure,<br>
-                            Diabetic Nephropathy,<br>
-                            Urinary Incontinence</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Obstetrics and Gynecology</h5>
-                            <p>Preeclampsia &amp; Pregnancy,<br>
-                              Uterine Fibroids,<br>
-			      Menopause,</br>
-                              Polycystic Ovarian Syndrome,<br>
-			      Cancers (Breast, Cervical, etc.)</p>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div class="divider dotted clearfix"><span></span></div>
+  <ul class="thumbnails">
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Lungs</h3>
+          <p>Obstructive Disease,
+          Environmental Exposures,
+          Work-related Diseases,
+          Pulmonary Hypertension,
+          Congenital Disorders</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
         </div>
-    </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Digestion &amp; Gastrointestinal</h3>
+          <p>Stomach Ulcers, Acid Reflux,
+          Irritable Bowel Syndrome,
+          Celiac Disease
+          Colon Cancer</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Brain and Nervous System</h3>
+          <p>Headaches, Alzheimers,
+          Brain Tumors,
+          Stroke, Bleeding,
+          Degenerative Disc Disease,
+          Meningitis</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
-{# For now, one row of diseases. Copy & clone the above when we're ready. #}
+
+
+<div class="row-fluid">
+  <ul class="thumbnails">
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Kidneys and Urinary System</h3>
+          <p>Chronic Kidney Disease,
+          Acute Renal Failure,
+          Diabetic Nephropathy,
+          Urinary Incontinence</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+          <h3>Obstetrics and Gynecology</h3>
+          <p>Preeclampsia &amp; Pregnancy,
+          Uterine Fibroids,
+          Menopause,
+          Polycystic Ovarian Syndrome,
+          Cancers (Breast, Cervical, etc.)</p><br>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+        </div>
+      </div>
+    </li>
+    <li class="span4">
+      <div class="thumbnail">
+        <div class="caption">
+            <form action="http://clindesk.us5.list-manage2.com/subscribe/post?u=b6cec37bff09d081f3eee6c75&amp;id=b4d36636c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+
+          <h3><b>Everything Else!</b></h3>
+          <p>We're growing! If you'd like to be notified about updates, enter your address:</p>
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
+            </form>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
