--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -4,34 +4,9 @@
 {% block lead %}Learn more about any disease or condition{% endblock %}
 {% block maincontent %}
 <!--main content-->
-<section class="mainContentWrap">
-    <div class="container mainContent">
-        <div class="row-fluid">
-            <div class="span12">
-
+<br>
+<div class="container">
 {% include '_all_conditions.html' %}
-
-            </div>
-        </div>
-	<div class="row-fluid">
-	  <div class="span2">&nbsp;</div>
-	  <div class="span8">
-
-<!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup" style="text-align: center">
-<form action="http://clindesk.us5.list-manage2.com/subscribe/post?u=b6cec37bff09d081f3eee6c75&amp;id=b4d36636c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-    <h3>Updates Mailing List</h3>
-  <h4>We're growing! We plan on adding many topics over the next few weeks.</h4>
-  <h4>If you'd like to be notified about updates, enter your address:</h4>
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info"></div>
-</form>
 </div>
-<!--End mc_embed_signup-->
-	  </div>
-        <div class="span2">&nbsp;</div>
-	</div>
-    </div>
-</section>
 
 {% endblock %}
