--- a/templates/_all_conditions.html
+++ b/templates/_all_conditions.html
@@ -1,5 +1,5 @@
 {# TODO: Make this a modularized for loop via Flask whatnots. #}
-<div class="row-fluid">
+<div class="row-fluid fixed-disease-height">
   <ul class="thumbnails">
     <li class="span4">
       <div class="thumbnail">
@@ -35,7 +35,7 @@
   </ul>
 </div>
 
-<div class="row-fluid">
+<div class="row-fluid fixed-disease-height">
   <ul class="thumbnails">
     <li class="span4">
       <div class="thumbnail">
@@ -79,7 +79,7 @@
 </div>
 
 
-<div class="row-fluid">
+<div class="row-fluid fixed-disease-height">
   <ul class="thumbnails">
     <li class="span4">
       <div class="thumbnail">
