These now fill each box. We should play w/ layout. Maybe bullets?

--- a/templates/_all_conditions.html
+++ b/templates/_all_conditions.html
@@ -5,7 +5,7 @@
       <div class="thumbnail">
         <div class="caption">
           <h3>Metabolism &amp; Endocrine</h3>
-          <p>Thyroid &amp; Parathyroid, Adrenal Gland, Diabetes, Lipid Disorders, Vitamins and Nutrition, Genetic Disorders</p><br>
+          <p>Thyroid and Parathyroid, Adrenal Gland, Diabetes, Lipid and Cholesterol Disorders, Vitamins and Nutrition, Genetic Disorders</p><br>
           <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
         </div>
       </div>
@@ -56,7 +56,7 @@
           <h3>Digestion &amp; Gastrointestinal</h3>
           <p>Stomach Ulcers, Acid Reflux,
           Irritable Bowel Syndrome,
-          Celiac Disease
+          Celiac Disease, Ulcerative Colitis &amp; Crohn's Disease,
           Colon Cancer</p><br>
           <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
         </div>
@@ -67,10 +67,10 @@
         <div class="caption">
           <h3>Brain and Nervous System</h3>
           <p>Headaches, Alzheimers,
-          Brain Tumors,
-          Stroke, Bleeding,
+          Brain Tumors, Multiple Sclerosis,
+          Strokes &ampl Bleeding,
           Degenerative Disc Disease,
-          Meningitis</p><br>
+          Meningitis, ALS</p><br>
           <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
         </div>
       </div>
@@ -85,8 +85,8 @@
       <div class="thumbnail">
         <div class="caption">
           <h3>Kidneys and Urinary System</h3>
-          <p>Chronic Kidney Disease,
-          Acute Renal Failure,
+          <p>Chronic Kidney Disease, Urinary Tract Infections,
+          Acute Renal Failure, Kidney Stones,
           Diabetic Nephropathy,
           Urinary Incontinence</p><br>
           <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
