--- a/templates/conditions/metabolism-and-endocrine/index.html
+++ b/templates/conditions/metabolism-and-endocrine/index.html
@@ -1,6 +1,7 @@
 {% extends "conditions/_all_topics_page.html" %}
 {% block title %}Metabolism and Endocrine{% endblock %}
 {% block tagline_text %}Metabolism and Endocrine{% endblock %}
+{% block lead %}Diabetes, thyroid diseases, metabolic syndrome, obesity, and more{% endblock %}
 {% block video_source %}5vfdIE-eMig{% endblock %}
 {% block author_name %}Nick Semenkovich{% endblock %}
 {% block author_image %}{{ static('img/heads/semenko.jpg') }}{% endblock %}
