--- a/templates/conditions/metabolism-and-endocrine/_all.html
+++ b/templates/conditions/metabolism-and-endocrine/_all.html
@@ -1,46 +1,41 @@
 {# TODO: Make this a modularized for loop via Flask whatnots. #}
-<div class="row-fluid">
-    <div class="span12">
-        <div class="row-fluid">
-            <ul class="thumbnails">
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Diabetes</h5>
-                            <p><a href="diabetes.html" class="btn btn-primary">Learn More</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Obesity &amp; Weight Problems</h5>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Metabolic Syndrome</h5>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Hyperthyroidism</h5>
-                            <p><a href="#" class="btn btn-info disabled">Coming Soon</a></p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div class="divider dotted clearfix"><span></span></div>
-        </div>
-    </div>
+<div class="row-fluid fixed-disease-height">
+    <ul class="thumbnails">
+        <li class="span3">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>Diabetes</h3>
+                    <p>Learn about management of diabetes, insulin, and diabetes medications.</p><br>
+                    <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+                </div>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>Weight Problems</h3>
+                    <p>Understand problems with obesity and weight gain, including new diet drugs.</p><br>
+                    <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+                </div>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>Hyperthyroidism</h3>
+                    <p>What does thyroid hormone do? And is radioactive iodine treatment dangerous?</p><br>
+                    <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+                </div>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>Low Testosterone</h3>
+                    <p>Seen those ads for "Low T?" We help you understand low testosterone and when to use testosterone meds.</p><br>
+                    <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+                </div>
+            </div>
+        </li>
+    </ul>
 </div>
