--- a/templates/donate.html
+++ b/templates/donate.html
@@ -6,61 +6,41 @@
 
 <div class="container">
     <br><br>
-  <div class="row">
-      <div class="span4">
-      	<div class="well">
-      		<h2 class="muted">Hosting for A Day</h2>
-      		<p><span class="label">POPULAR</span></p>
-      		<ul>
-      			<li>10 users</li>
-      			<li>Unlimited access</li>
-      			<li>3TB of space</li>
-      			<li>E-mail support</li>
-      		</ul>
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-      		<hr>
-      		<h3>$15.99 / month</h3>
-      		<hr>
-      		<p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
-      	</div>
-      </div>
-      <div class="span4">
-      	<div class="well">
-      		<h2 class="text-warning">Sponsor a Disease</h2>
-      		<p><span class="label label-success">POPULAR</span></p>
-      		<ul>
-      			<li>20 users</li>
-      			<li>Unlimited access with no limits</li>
-      			<li>5TB of space</li>
-      		</ul>
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-      		<hr>
-      		<h3>$10.99 / month</h3>
-      		<hr>
-      		<p><a class="btn btn-success btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
-      	</div>
-      </div>
-      <div class="span4">
-      	<div class="well">
-      		<h2 class="text-info">Give What You Can</h2>
-      		<p><span class="label label-info">BUDGET</span></p>
-      		<ul>
-      			<li>10 users</li>
-      			<li>5TB of space</li>
-      		</ul>
-      		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-      		<hr>
-      		<h3>$8.99 / month</h3>
-      		<hr>
-            <p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
-      	</div>
-      </div>
-  </div>
+    <div class="row">
+        <div class="span4">
+            <div class="well">
+                <h1 class="text-warning">Hosting for A Day</h1>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+                <hr>
+                <h3>$25</h3>
+                <hr>
+                <p><a class="btn btn-warning btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="well">
+                <h1 class="text-success">Sponsor a Disease</h1>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+                <hr>
+                <h3>$200</h3>
+                <hr>
+                <p><a class="btn btn-success btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="well">
+                <h1 class="text-info">Give What You Can</h1>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+                <hr>
+                <h3>$8.99</h3>
+                <hr>
+                <p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+            </div>
+        </div>
+    </div>
 </div>
 
-
 {#
-
 <blockquote>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
   <small>Someone famous <cite title="Source Title">Source Title</cite></small>
