--- a/templates/donate.html
+++ b/templates/donate.html
@@ -9,32 +9,29 @@
     <div class="row">
         <div class="span4">
             <div class="well">
-                <h1 class="text-warning">Hosting for A Day</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-                <hr>
-                <h3>$25</h3>
-                <hr>
-                <p><a class="btn btn-warning btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+                <h2 class="text-warning">Hosting for A Day</h2>
+                <p class="lead">Running our website is expensive!</p>
+                <p class="lead">Help spread medical knowledge by keeping us running.</p>
+                <button type="submit" class="btn btn-warning btn-large">Help Run our Website for <b>$25</b></button>
             </div>
         </div>
         <div class="span4">
             <div class="well">
-                <h1 class="text-success">Sponsor a Disease</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-                <hr>
-                <h3>$200</h3>
-                <hr>
-                <p><a class="btn btn-success btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+                <h2 class="text-success">Sponsor a Disease</h2>
+                <p class="lead">Want something we don't have? Sponsor a disease and we'll add it to our video series.</p>
+                <p class="lead">If you sponsor a disease, we'll get in touch and work with you as we make our videos!</p>
+                <button type="submit" class="btn btn-success btn-large">Sponsor a Disease for <b>$200</b></button>
             </div>
         </div>
         <div class="span4">
             <div class="well">
-                <h1 class="text-info">Give What You Can</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
-                <hr>
-                <h3>$8.99</h3>
-                <hr>
-                <p><a class="btn btn-large" href="#"><i class="icon-ok"></i> Select plan</a></p>
+                <h2 class="text-info">Give What You Can</h2>
+                <p class="lead">Any amount helps!</p>
+
+                <form class="form-inline">
+                  <span class="add-on">$</span><input type="text" class="input-small" value="15">
+                  <button type="submit" class="btn btn-info">Give Now</button>
+                </form>
             </div>
         </div>
     </div>
