I like blockquotes. We should put one here.

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -75,7 +75,12 @@
                     <input type="hidden" name="signatureVersion" value="2" >
                     <input type="hidden" name="signature" value="HkHrz3l6FdCLDUnwxKP8JNtLaH/tjUTovpwZ4PP2oFE=" >
                     <h2 class="text-info">Give What You Can</h2>
-                    <p class="lead">Any amount helps!</p>
+                    <p class="lead">Help us open medical knowledge.</p>
+                    <blockquote>
+                      <p>The history of medicine is that what was inconceivable yesterday and barely achievable today often becomes routine tomorrow.</p>
+                      <small>Thomas Starzl <cite title="MD">MD</cite></small>
+                    </blockquote>
+                    <p class="lead">Any amount helps.</p>
                     <form class="form-inline">
                         <span class="add-on">$</span><input type="text" name="amount" class="input-small" value="15">
                         <button type="submit" class="btn btn-info">Give Now</button>
@@ -84,12 +89,5 @@
         </div>
     </div>
 </div>
-
-{#
-<blockquote>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-  <small>Someone famous <cite title="Source Title">Source Title</cite></small>
-</blockquote>
-#}
 
 {% endblock %}
